# todo-tutorial

./: .gitignore  .gitmodules  README.md  cabal.project  default.nix  hie.yaml
backend/: backend.cabal  hie.yaml
common/: LICENSE  common.cabal
common/src/: Common.hs
frontend/: frontend.cabal  hie.yaml
frontend/app/: GHCJS.hs  JSFFI.hs  Main.hs
todo-backend/: todo-backend.cabal
todo-backend/app/: Main.hs
todo-common/: hie.yaml  todo-common.cabal
todo-common/src/: Common.hs
todo-frontend/: todo-frontend.cabal
todo-frontend/app/: GHCJS.hs
